--- a/modeladoysimulacion3d.html
+++ b/modeladoysimulacion3d.html
@@ -96,8 +96,8 @@ Finalmente, al unir todos estos módulos resulta en la imagen mostrada a continu
 <script nomodule src="https://unpkg.com/@google/model-viewer/dist/model-viewer-legacy.js"></script>
 
 <model-viewer 
-  src="assets/3d/ensamblado.glb"
-  alt=""
+  src="a.glb"
+  alt="ss"
   style="width: 100%;height: 600px;"
   auto-rotate
   camera-controls>
