--- a/proyectospreliminares.html
+++ b/proyectospreliminares.html
@@ -61,18 +61,53 @@
   <section id="services" class="services section-bg">
     <div class="container" >
       <div class="section-title">
-        <h2>Boceto</h2>
+        <h2>Proyecto preliminar 1</h2>
       </div>
 
 
 
           <div class="cifras section-bg" style="margin-top:-55px">
       <center>
-              <a href="assets/img/proyectospreliminares/Boceto.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title=""><div class="portfolio-img" ><img src="assets/img/proyectospreliminares/Boceto.png" class="img-fluid" alt="" width="70%"></a>
+              <a href="assets/img/proyectospreliminares/Boceto_1.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title=""><div class="portfolio-img" ><img src="assets/img/proyectospreliminares/Boceto_1.png" class="img-fluid" alt="" width="65%"></a>
       </center>     
     </div>
 
+    </div>
+  </section><!-- End Services Section -->
 
+    <!-- ======= Services Section ======= -->
+  <section id="services" class="services section-bg-white">
+    <div class="container" >
+      <div class="section-title">
+        <h2>Proyecto preliminar 2</h2>
+      </div>
+
+
+
+          <div class="cifras section-bg" style="margin-top:-55px;background-color: white;">
+      <center>
+              <a href="assets/img/proyectospreliminares/Boceto_2.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title=""><div class="portfolio-img" ><img src="assets/img/proyectospreliminares/Boceto_2.png" class="img-fluid" alt="" width="65%"></a>
+      </center>  
+    </div>
+
+    </div>
+  </section><!-- End Services Section -->
+
+
+    <!-- ======= Services Section ======= -->
+  <section id="services" class="services section-bg">
+    <div class="container" >
+      <div class="section-title">
+        <h2>Proyecto preliminar 3</h2>
+      </div>
+
+
+
+          <div class="cifras section-bg" style="margin-top:-55px">
+      <center>
+              <a href="assets/img/proyectospreliminares/Boceto_3.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title=""><div class="portfolio-img" ><img src="assets/img/proyectospreliminares/Boceto_3.png" class="img-fluid" alt="" width="65%"></a>
+      </center>     
+    </div>
 
     </div>
   </section><!-- End Services Section -->
