--- a/modeladoysimulacion3d.html
+++ b/modeladoysimulacion3d.html
@@ -90,18 +90,9 @@ Finalmente, al unir todos estos módulos resulta en la imagen mostrada a continu
       <center>
 
 
+<div class="sketchfab-embed-wrapper" > <iframe title="Ensamblado" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share style="width: 100%;height: 600px;" src="https://sketchfab.com/models/339ff9e2f50f4def973bf17e6b0841f0/embed?autostart=1"> </iframe> </div>
 
               
-<script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
-<script nomodule src="https://unpkg.com/@google/model-viewer/dist/model-viewer-legacy.js"></script>
-
-<model-viewer 
-  src="a.glb"
-  alt="ss"
-  style="width: 100%;height: 600px;"
-  auto-rotate
-  camera-controls>
-</model-viewer>
 
 
 
